# sanic-canvas

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  webpack.config.js
app/: default.nix
app/bevy_app/: Cargo.toml
app/shared/src/: lib.rs
app/web_app/: Cargo.toml
app/web_app/src/: main.rs
assets/shaders/: square.wgsl
bevy_app/src/: main.rs
js/: index.js
leptos-app/: Cargo.toml
nannou-app/: Cargo.toml
nannou-app/src/: lib.rs  main.rs  sketch.rs
nixos/: configuration.nix  hardware-configuration.nix
pkgs/deploy/: default.nix  deploy.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  main.rs  sketch.rs
static/: index.html
web_app/: index.html
