[package]
name = "web_app"
version = "0.0.1"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
bevy = { workspace = true }
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
leptos-use = "0.15.7"
shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3.22"
features = ["console", "Window", "Document", "Element", "HtmlElement"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
